@@ -12,7 +12,8 @@ import sql.operators
 
 from trytond.tools import (
     reduce_ids, reduce_domain, decimal_, is_instance_method, file_open,
-    strip_wildcard, lstrip_wildcard, rstrip_wildcard, slugify, sortable_values)
+    strip_wildcard, lstrip_wildcard, rstrip_wildcard, slugify, sortable_values,
+    escape_wildcard)
 from trytond.tools.string_ import StringPartitioned, LazyString
 from trytond.tools.domain_inversion import (
     domain_inversion, parse, simplify, merge, concat, unique_value,
@@ -194,6 +195,11 @@ class ToolsTestCase(unittest.TestCase):
 
     def test_rstrip_wildcard_diferent_wildcard(self):
         self.assertEqual(rstrip_wildcard('a___', '_'), 'a')
+
+    def test_escape_wildcard(self):
+        self.assertEqual(
+            escape_wildcard('foo%bar_baz\\'),
+            'foo\\%bar\\_baz\\\\')
 
     def test_slugify(self):
         "Test slugify"
